--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </figure>
         <q>Anreise</q>
         <ul>
-            <li><i class="fas fa-plane"></i>Flugzeug: Palermo besitzt einen Flughafen (Palermo-Punta Raisi “Falcone e Borsellino”) mit einer
+            <li><i class="fas fa-plane"></i>Flughafen: Palermo besitzt einen Flughafen (Palermo-Punta Raisi “Falcone e Borsellino”) mit einer
                 Busverbindung in die Innenstadt.
             </li>
             <li><i class="fas fa-subway"></i>Zug: Eine Anreise mit dem Zug ist unter Verwendung der Fähre nach Sizilien möglich. Der Bahnhof in
